load("@npm//@graphql-codegen/cli:index.bzl", "graphql_codegen")
load("@build_bazel_rules_nodejs//:index.bzl", "npm_package_bin")

npm_package_bin(
    name = "gen",
    outs = ["types.ts"],
    args = [
        "--config",
        "$(location codegen.yaml)",
    ],
    data = [
        "codegen.yaml",
        "schema.graphql",
        "@npm//@graphql-codegen/typescript",
        "@npm//@graphql-codegen/typescript-resolvers",
    ],
    package = "@graphql-codegen/cli",
    package_bin = "graphql-codegen",
)
